SERVER-21447 reject configs with protocolversions other than 0 and 1